edited sample templates

--- a/html_template.html
+++ b/html_template.html
@@ -1,1 +1,29 @@
 <!-- Edit this template as you wish -->
+
+<!DOCTYPE html>
+<html lang="en-US">
+
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="css_template.css">
+        <title>Our title</title>
+    </head>
+
+    <body>
+        <div class="center">
+            <h1 title="Website">Website</h1>
+            <p>
+                Description
+            </p>
+        </div>
+        <div>
+            <p>
+                OnePieceysuygugygdgyksdguysgygsdsdsdf
+                OnePieceysuygugygdgyksdguysgygsdsdsdf
+                OnePieceysuygugygdgyksdguysgygsdsdsdf
+            </p>
+        </div>
+    </body>
+
+</html>
