--- a/html_template.html
+++ b/html_template.html
@@ -7,23 +7,45 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css_template.css">
-        <title>Our title</title>
+        <title>Project 1</title>
     </head>
 
     <body>
-        <div class="center">
-            <h1 title="Website">Website</h1>
-            <p>
-                Description
-            </p>
-        </div>
-        <div>
-            <p>
-                OnePieceysuygugygdgyksdguysgygsdsdsdf
-                OnePieceysuygugygdgyksdguysgygsdsdsdf
-                OnePieceysuygugygdgyksdguysgygsdsdsdf
-            </p>
-        </div>
-    </body>
 
+        <div class="header">
+            <h1>Website Title</h1>
+            <p>
+                Description, or just take this off if you'd like
+            </p>
+        </div>
+
+        <div class="box">
+            <h2>
+                A heading
+            </h2>
+            <div>
+                <img class="image" src="https://upload.wikimedia.org/wikipedia/commons/5/50/White_Lotus_Flower_2.jpg"/>
+            </div>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis porta felis. Aliquam tincidunt iaculis nunc a mattis. Phasellus tincidunt blandit nisl ut lacinia. Phasellus tristique tortor eu neque rutrum tempus. Praesent fermentum arcu ac augue egestas iaculis. In lobortis neque quis urna consequat pharetra. Morbi at lobortis elit. Ut bibendum condimentum sem vel pellentesque. Vestibulum egestas, quam eu fringilla congue, ipsum quam consectetur odio, tincidunt mattis nisl libero eget lectus. Sed molestie quam vitae sodales venenatis. In blandit mollis quam.
+            </p>
+            <h2>
+                Another header
+            </h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis porta felis. Aliquam tincidunt iaculis nunc a mattis. Phasellus tincidunt blandit nisl ut lacinia. Phasellus tristique tortor eu neque rutrum tempus. Praesent fermentum arcu ac augue egestas iaculis. In lobortis neque quis urna consequat pharetra. Morbi at lobortis elit. Ut bibendum condimentum sem vel pellentesque. Vestibulum egestas, quam eu fringilla congue, ipsum quam consectetur odio, tincidunt mattis nisl libero eget lectus. Sed molestie quam vitae sodales venenatis. In blandit mollis quam.
+            </p>
+        </div>
+
+        <div class="next-page">
+            <a href="https://www.google.com">
+                <img style="transform: scaleX(-1)" src="https://img.icons8.com/ios/50/000000/circled-right-2.png"/>
+            </a>
+            <a href="https://www.youtube.com">
+                <img src="https://img.icons8.com/ios/50/000000/circled-right-2.png"/>
+            </a>
+            
+        </div>
+        
+    </body>
 </html>
