Added box shadow

--- a/html_template.html
+++ b/html_template.html
@@ -20,9 +20,6 @@
         </div>
 
         <div class="box">
-            <h2>
-                A heading
-            </h2>
             <div>
                 <img class="image" src="https://upload.wikimedia.org/wikipedia/commons/5/50/White_Lotus_Flower_2.jpg"/>
             </div>
@@ -30,7 +27,7 @@
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis porta felis. Aliquam tincidunt iaculis nunc a mattis. Phasellus tincidunt blandit nisl ut lacinia. Phasellus tristique tortor eu neque rutrum tempus. Praesent fermentum arcu ac augue egestas iaculis. In lobortis neque quis urna consequat pharetra. Morbi at lobortis elit. Ut bibendum condimentum sem vel pellentesque. Vestibulum egestas, quam eu fringilla congue, ipsum quam consectetur odio, tincidunt mattis nisl libero eget lectus. Sed molestie quam vitae sodales venenatis. In blandit mollis quam.
             </p>
             <h2>
-                Another header
+                A header
             </h2>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis porta felis. Aliquam tincidunt iaculis nunc a mattis. Phasellus tincidunt blandit nisl ut lacinia. Phasellus tristique tortor eu neque rutrum tempus. Praesent fermentum arcu ac augue egestas iaculis. In lobortis neque quis urna consequat pharetra. Morbi at lobortis elit. Ut bibendum condimentum sem vel pellentesque. Vestibulum egestas, quam eu fringilla congue, ipsum quam consectetur odio, tincidunt mattis nisl libero eget lectus. Sed molestie quam vitae sodales venenatis. In blandit mollis quam.
