--- a/pesticides.html
+++ b/pesticides.html
@@ -1,40 +1,16 @@
-<!--This is a comment. Comments are not displayed in the browser<!DOCTYPE html>
-<html>
-	<head>
-		<title>Pesticides and you!</title>
-		<link rel="stylesheet" href="test.css">
-	</head>
-	<body>
-		<border>
-			<h1>Pesticides: Why should you care?</h1>
-			<p>Pesticide runoff pollutes water systems and harms the wildlife and communities that rely on them. Even if you're selfish, you still have something to gain from keeping them away from your food. Pesticide residue may still be present in your food!!!</p>
-		</border>
-		<h2 style= "color:red">What are we going to do about it?</h2>
-		<p>We only use organic farming practicesto grow your food. As a community owned garden, we answer to those that are directly affected by our production practices.</p>
-
-		<p>A whole lot &#128561;!!!!!</p>
-	</body>
-</html> -->
-
 <!-- Edit this template as you wish -->
 
 <!DOCTYPE html>
 <html lang="en-US">
-
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css_template.css">
-        <title>Project 1</title>
+        <title>Pesticides and you!</title>
     </head>
-
     <body>
-
         <div class="header">
-            <h1>Website Title</h1>
-            <p>
-                Description, or just take this off if you'd like
-            </p>
+            <h1>Pesticides in Industrial Farming</h1>
         </div>
 
         <div class="box">
@@ -44,15 +20,13 @@
             <div>
                 <img class="image" src="https://upload.wikimedia.org/wikipedia/commons/5/50/White_Lotus_Flower_2.jpg"/>
             </div>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis porta felis. Aliquam tincidunt iaculis nunc a mattis. Phasellus tincidunt blandit nisl ut lacinia. Phasellus tristique tortor eu neque rutrum tempus. Praesent fermentum arcu ac augue egestas iaculis. In lobortis neque quis urna consequat pharetra. Morbi at lobortis elit. Ut bibendum condimentum sem vel pellentesque. Vestibulum egestas, quam eu fringilla congue, ipsum quam consectetur odio, tincidunt mattis nisl libero eget lectus. Sed molestie quam vitae sodales venenatis. In blandit mollis quam.
-            </p>
-            <h2>
-                Another header
-            </h2>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis porta felis. Aliquam tincidunt iaculis nunc a mattis. Phasellus tincidunt blandit nisl ut lacinia. Phasellus tristique tortor eu neque rutrum tempus. Praesent fermentum arcu ac augue egestas iaculis. In lobortis neque quis urna consequat pharetra. Morbi at lobortis elit. Ut bibendum condimentum sem vel pellentesque. Vestibulum egestas, quam eu fringilla congue, ipsum quam consectetur odio, tincidunt mattis nisl libero eget lectus. Sed molestie quam vitae sodales venenatis. In blandit mollis quam.
-            </p>
+            <h1>Pesticides: Why should you care?</h1>
+            <p>Pesticide runoff pollutes water systems and harms the wildlife and communities that rely on them. Even if you're selfish, you still have something to gain from keeping them away from your food. Pesticide residue may still be present in your food!!!</p>
+            
+            <h2 style= "color:red">What are we going to do about it?</h2>
+        <p>We only use organic farming practicesto grow your food. As a community owned garden, we answer to those that are directly affected by our production practices.</p>
+
+        <p>A whole lot &#128561;!!!!!</p>
         </div>
 
         <div class="next-page">
