--- a/desertification.html
+++ b/desertification.html
@@ -36,7 +36,7 @@
         <div class="box">
             <div>
                 <h1 id="blog-title">
-                    Problems with Deforestation
+                    Problems with Desertification
                 </h1>
             </div>
             <div>
