implemented style by Ricky Rodriguez

--- a/pesticides.html
+++ b/pesticides.html
@@ -6,6 +6,22 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css_template.css">
+        <style>
+            #blog-title{
+                font-family: Verdana, Geneva, Tahoma, sans-serif;
+                font-style: italic;
+                font-variant: small-caps;
+            }
+            /* This is for the image you add, will be at the center at all times, unless you edit it  */
+            #image-one {
+                display: block;
+                margin-left: auto;
+                margin-right: auto;
+                width: 40%;
+                height: auto;
+                border-radius: 10px;
+            }
+        </style>
         <title>Pesticides and you!</title>
     </head>
     <body>
