implemented header links written by Ricky R. Removed link to pesticide page, as the user would have no reason to use it.

--- a/pesticides.html
+++ b/pesticides.html
@@ -27,6 +27,8 @@
     <body>
         <div class="header">
             <h1>Pesticides in Industrial Farming</h1>
+            <a title="Home" href="https://www.google.com" style="padding-right: 10px;">Home</a>
+            <a title="Deforestation" href="https://www.google.com" style="padding-right: 10px;">Deforestation</a>
         </div>
 
         <div class="box">
