changed image of flower to a more appropriate one. removed unused heading.

--- a/pesticides.html
+++ b/pesticides.html
@@ -32,11 +32,8 @@
         </div>
 
         <div class="box">
-            <h2>
-                A heading
-            </h2>
             <div>
-                <img class="image" src="https://upload.wikimedia.org/wikipedia/commons/5/50/White_Lotus_Flower_2.jpg"/>
+                <img class="image" src="https://scx1.b-cdn.net/csz/news/800/2018/pesticidesan.jpg"/>
             </div>
             <h1>Pesticides: Why should you care?</h1>
             <p>Pesticide runoff pollutes water systems and harms the wildlife and communities that rely on them. Even if you're selfish, you still have something to gain from keeping them away from your food. Pesticide residue may still be present in your food!!!</p>
