--- a/desertification.html
+++ b/desertification.html
@@ -43,7 +43,7 @@
                 <img id="image-one" src="dry.jpg"/>
             </div>
             <p>
-                The United Nations defines desertification as "land degradation in arid, semi-arid and dry sub-humid areas resulting from various factors, including climatic variations and human activities". Degradation can happen anywhere in the world, except in Artantica. Some of the causes of desertification include <b>overgrazing</b> and <b>unsustainable agriculture techniques</b>. Our community garden will aim to stop degradation in our community little by little by following several practices.            </p>
+                The United Nations defines desertification as "land degradation in arid, semi-arid and dry sub-humid areas resulting from various factors, including climatic variations and human activities". Degradation can happen anywhere in the world, except in Antarctica. Some of the causes of desertification include <b>overgrazing</b> and <b>unsustainable agriculture techniques</b>. Our community garden will aim to stop degradation in our community little by little by following several practices.            </p>
             <h2>
                 Overgrazing
             </h2>
