added donate link and linked to desertification page.

--- a/pesticides.html
+++ b/pesticides.html
@@ -27,8 +27,8 @@
     <body>
         <div class="header">
             <h1>Pesticides in Industrial Farming</h1>
-            <a title="Home" href="https://www.google.com" style="padding-right: 10px;">Home</a>
-            <a title="Deforestation" href="https://www.google.com" style="padding-right: 10px;">Deforestation</a>
+            <a title="Home" href="" style="padding-right: 10px;">Home</a>
+            <a title="Desertification" href="desertification.html" style="padding-right: 10px;">Desertification</a>
         </div>
 
         <div class="box">
@@ -43,14 +43,14 @@
                     <li>"Cleanup of groundwater contaminated by pesticides is usually impossible." - Cornell Uninversity Cooperative Extension</li>
                     <li>Approximately 10% of the U.S.'s population relies on water provided by private wells, which are not regulated under the Safe Drinking Water Act.</li>
                 </ul>
-                To see the harm of pesticides in action, watch:
+                To see the harm of pesticide runoff in action, watch:
                 <p align = "center">
                     <iframe width="500" height="345" src="https://www.youtube.com/embed/vA2WiQwJ3xI"> </iframe>
                 </p>
             </p>
 
            
-            <p>To those who live in urban environments: remember that pesticide residue may still be present in your food! Do you know what percent of apples tested by the EWG contained pesticide residue? Over 90%, or way too much &#128561;! Here are the facts: 
+            <p>To those who live don't rely on private wells, remember that pesticide residue may still be present in your food! Do you know what percent of apples tested by the EWG contained pesticide residue? Over 90%, or way too much &#128561;! Here are the facts: 
                 <ul>
                     <li>Over 5 million cases of pesticide poisoning and related death are reported each year.</li>
                     <li>Poisoning can occur after even brief exposure through the skin, eyes, mouth, or longs.</li>
@@ -63,5 +63,13 @@
             <p>We only use organic farming practices to grow your food. As a community owned garden, we answer to those that are directly affected by our production practices and not to those seeking to lower costs by any means.</p>
 
         </div> 
+
+        <div class="next-page">
+            <a title="Donate" href="https://www.change.org">
+                <img src="https://img.icons8.com/cotton/64/000000/donate--v1.png"/>
+                <br>
+                Donate to our garden here!
+            </a>
+        </div>
     </body>
 </html>
