--- a/desertification.html
+++ b/desertification.html
@@ -30,7 +30,7 @@
             <a title="Our Community Garden" href="https://www.google.com"><h1>Our Community Garden</h1></a>
             <a title="Home" href="https://www.google.com" style="padding-right: 10px;">Home</a>
             <a title="Deforestation" href="https://www.google.com" style="padding-right: 10px;">Deforestation</a>
-            <a title="Pestticides" href="https://www.google.com">Pesticides</a>
+            <a title="Pestticides" href="pesticides.html">Pesticides</a>
         </div>
 
         <div class="box">
@@ -57,7 +57,7 @@
         </div>
 
         <div class="next-page">
-            <a title="Donate" href="https://www.change.org">
+            <a title="Donate" href="https://www.patreon.com">
                 <img src="https://img.icons8.com/cotton/64/000000/donate--v1.png"/>
                 <br>
                 Donate to our garden here!
