--- a/pesticides.html
+++ b/pesticides.html
@@ -9,7 +9,6 @@
         <style>
             #blog-title{
                 font-family: Verdana, Geneva, Tahoma, sans-serif;
-                font-style: italic;
                 font-variant: small-caps;
             }
             /* This is for the image you add, will be at the center at all times, unless you edit it  */
@@ -65,7 +64,7 @@
         </div> 
 
         <div class="next-page">
-            <a title="Donate" href="https://www.change.org">
+            <a title="Donate" href="https://www.patreon.com">
                 <img src="https://img.icons8.com/cotton/64/000000/donate--v1.png"/>
                 <br>
                 Donate to our garden here!
