changed name of page and heading. added colors to heading

--- a/desertification.html
+++ b/desertification.html
@@ -21,16 +21,15 @@
                 border-radius: 10px;
             }
         </style>
-        <title>Project 1</title>
+        <title>Desertification in Industrial Farming</title>
     </head>
 
     <body>
 
         <div class="header">
-            <a title="Our Community Garden" href="https://www.google.com"><h1>Our Community Garden</h1></a>
-            <a title="Home" href="https://www.google.com" style="padding-right: 10px;">Home</a>
-            <a title="Deforestation" href="https://www.google.com" style="padding-right: 10px;">Deforestation</a>
-            <a title="Pestticides" href="pesticides.html">Pesticides</a>
+            <a title="Our Community Garden" href="homepage.html"><h1 style = "color:#228B22">South Jamaica Community Garden </h1></a>
+            <a title="Home" href="homepage.html" style="padding-right: 10px;">Home</a>
+            <a title="Pesticides" href="pesticides.html">Pesticides</a>
         </div>
 
         <div class="box">
@@ -48,7 +47,7 @@
                 Overgrazing
             </h2>
             <p>
-                Having too many herbivore and omnivore animals in an area can reduce the amount of grass being reproduced. These animals could eat all of the grass available, or they can stomp on them repeatedly, negatively affecting the growth of the grass. Our community garden aims to have a limited number of animals and insects to prevent overgrazing. They will be fed with a reasonable amount of crops from a special section in our garden that is only reserved for animal food. In the case of having some sort of shortage due to an unprecedented event, we have partnered with our local farms to donate vegetables for animals and insects in our care.            </p>
+                Having too many animals in an area can negatively impact grass reproduction. These animals could eat all of the grass available, or they can stomp on them repeatedly, negatively affecting the growth of the grass. Our community garden aims to have a limited number of animals and insects to prevent overgrazing. They will be fed with a reasonable amount of crops from a special section in our garden that is only reserved for animal food. In the case of having some sort of shortage due to an unprecedented event, we have partnered with our local farms to donate vegetables for animals and insects in our care.            </p>
             <h2>
                 Poor Agriculture
             </h2>
