--- a/pesticides.html
+++ b/pesticides.html
@@ -25,13 +25,13 @@
     </head>
     <body>
         <div class="header">
-            <h1>Pesticides in Industrial Farming</h1>
-            <a title="Home" href="" style="padding-right: 10px;">Home</a>
+            <h1 style = "color:#228B22">South Jamaica Community Garden</h1>
+            <a title="Home" href="homepage.html" style="padding-right: 10px;">Home</a>
             <a title="Desertification" href="desertification.html" style="padding-right: 10px;">Desertification</a>
         </div>
 
         <div class="box">
-            <h1>Pesticides: Why should you care?</h1>
+            <h1 style= "color:#B22222">Pesticides: Why should you care?</h1>
             <div>
                 <img class="image" src="https://scx1.b-cdn.net/csz/news/800/2018/pesticidesan.jpg"/>
             </div>
@@ -58,7 +58,7 @@
                     <li>One study found that pregnant women with high pesticide residue exposure are 26% less likely to have a live birth than women with low pesticide residue exposure.</li>
                 </ul></p>
     
-            <h2 style= "color:red">What are we going to do about it?</h2>
+            <h2 style= "color:#B22222">What are we going to do about it?</h2>
             <p>We only use organic farming practices to grow your food. As a community owned garden, we answer to those that are directly affected by our production practices and not to those seeking to lower costs by any means.</p>
 
         </div> 
