--- a/desertification.html
+++ b/desertification.html
@@ -28,7 +28,7 @@
 
         <div class="header">
             <a title="Our Community Garden" href="homepage.html"><h1 style = "color:#228B22">South Jamaica Community Garden </h1></a>
-            <a title="Home" href="homepage.html" style="padding-right: 10px;">Home</a>
+            <a title="Home" href="Home_Page.html" style="padding-right: 10px;">Home</a>
             <a title="Pesticides" href="pesticides.html">Pesticides</a>
         </div>
 
