--- a/pesticides.html
+++ b/pesticides.html
@@ -26,7 +26,7 @@
     <body>
         <div class="header">
             <h1 style = "color:#228B22">South Jamaica Community Garden</h1>
-            <a title="Home" href="homepage.html" style="padding-right: 10px;">Home</a>
+            <a title="Home" href="Home_Page.html" style="padding-right: 10px;">Home</a>
             <a title="Desertification" href="desertification.html" style="padding-right: 10px;">Desertification</a>
         </div>
 
