--- a/Home_Page.html
+++ b/Home_Page.html
@@ -22,18 +22,15 @@
                 border-radius: 10px;
             }
         </style>
-        <title>Project 1</title>
+        <title>Home | Community Garden</title>
     		</head>
     		<body>
 
         <div class="header">
             
-
-<a title="Our Community Garden" href="https://www.google.com"><h1>Our Community Garden</h1></a>
-	<p> Click below for more information on the following topics:</p>
-            <a title="Deforestation" href="https://www.google.com" style="padding-right: 10px;">Deforestation</a>
-
-            <a title="Pesticides" href="https://www.google.com">Pesticides</a>
+    <a title="Our Community Garden" href="Home_Page.html"><h1 style = "color:#228B22">South Jamaica Community Garden </h1></a>
+    <a title="Desertification" href="desertification.html" style="padding-right: 10px;">Desertification</a>
+    <a title="Pesticides" href="pesticides.html">Pesticides</a>
         </div>
 
         <div class="box">
@@ -43,9 +40,9 @@
                 </h1>
 				<ul>
 				<li>Improve the health of the community by developing a sustainable local food system to increase the accessibility of healthy food options, such as fruits and vegetables, <b>(particularly for lower-income families and individuals)</b> to the community.</li>
-				<li>Empower the community by providing education in the form of nutrition and food preparation seminars 
+				<li>Empower the community by providing education in the form of nutrition and food preparation seminars. 
 				</li>
-				<li>Bring the diverse people of the community together </li>
+				<li>Bring the diverse people of the community together. </li>
             </div>
             <div>
                 <img id="image-one" src="Community_logo.jpg"/>
