Fixed problem with linking pages

--- a/Home_Page.html
+++ b/Home_Page.html
@@ -23,17 +23,15 @@
             }
         </style>
         <title>Project 1</title>
-    		</head>
-    		<body>
+    </head>
+            
+    <body>
 
         <div class="header">
-            
-
-<a title="Our Community Garden" href="https://www.google.com"><h1>Our Community Garden</h1></a>
-	<p> Click below for more information on the following topics:</p>
-            <a title="Deforestation" href="https://www.google.com" style="padding-right: 10px;">Deforestation</a>
-
-            <a title="Pesticides" href="https://www.google.com">Pesticides</a>
+            <a title="South Jamaica Community Garden" href="homepage.html"><h1 style = "color:#228B22">South Jamaica Community Garden </h1></a>
+            <a title="Home" href="Home_Page.html" style="padding-right: 10px;">Home</a>
+            <a title="Desertification" href="desertification.html" style="padding-right: 10px;">Desertification</a>
+            <a title="Pesticides" href="pesticides.html">Pesticides</a>
         </div>
 
         <div class="box">
@@ -71,7 +69,7 @@
         </div>
 
         <div class="next-page">
-            <a title="Donate" href="https://www.change.org">
+            <a title="Donate" href="https://www.patreon.com">
                 <img src="https://img.icons8.com/cotton/64/000000/donate--v1.png"/>
                 <br>
                 Donate to our garden here!
