--- a/Home_Page.html
+++ b/Home_Page.html
@@ -41,9 +41,9 @@
                 </h1>
 				<ul>
 				<li>Improve the health of the community by developing a sustainable local food system to increase the accessibility of healthy food options, such as fruits and vegetables, <b>(particularly for lower-income families and individuals)</b> to the community.</li>
-				<li>Empower the community by providing education in the form of nutrition and food preparation seminars 
+				<li>Empower the community by providing education in the form of nutrition and food preparation seminars. 
 				</li>
-				<li>Bring the diverse people of the community together </li>
+				<li>Bring the diverse people of the community together. </li>
             </div>
             <div>
                 <img id="image-one" src="Community_logo.jpg"/>
