--- a/desertification.html
+++ b/desertification.html
@@ -27,15 +27,16 @@
     <body>
 
         <div class="header">
-            <a title="Our Community Garden" href="homepage.html"><h1 style = "color:#228B22">South Jamaica Community Garden </h1></a>
+            <a title="South Jamaica Community Garden" href="homepage.html"><h1 style = "color:#228B22">South Jamaica Community Garden </h1></a>
             <a title="Home" href="Home_Page.html" style="padding-right: 10px;">Home</a>
+            <a title="Desertification" href="desertification.html" style="padding-right: 10px;">Desertification</a>
             <a title="Pesticides" href="pesticides.html">Pesticides</a>
         </div>
 
         <div class="box">
             <div>
                 <h1 id="blog-title">
-                    Problems with Desertification
+                    Desertification in Industrial Farming
                 </h1>
             </div>
             <div>
