--- a/pesticides.html
+++ b/pesticides.html
@@ -25,9 +25,10 @@
     </head>
     <body>
         <div class="header">
-            <h1 style = "color:#228B22">South Jamaica Community Garden</h1>
+            <a title="South Jamaica Community Garden" href="homepage.html"><h1 style = "color:#228B22">South Jamaica Community Garden </h1></a>
             <a title="Home" href="Home_Page.html" style="padding-right: 10px;">Home</a>
             <a title="Desertification" href="desertification.html" style="padding-right: 10px;">Desertification</a>
+            <a title="Pesticides" href="pesticides.html">Pesticides</a>
         </div>
 
         <div class="box">
