Fixed link issues

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <body>
 
         <div class="header">
-            <a title="South Jamaica Community Garden" href="homepage.html"><h1 style = "color:#228B22">South Jamaica Community Garden </h1></a>
+            <a title="South Jamaica Community Garden" href="index.html"><h1 style = "color:#228B22">South Jamaica Community Garden </h1></a>
             <a title="Home" href="index.html" style="padding-right: 10px;">Home</a>
             <a title="Desertification" href="desertification.html" style="padding-right: 10px;">Desertification</a>
             <a title="Pesticides" href="pesticides.html">Pesticides</a>
